# grok-mcp

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
crates/grok-auth/: Cargo.toml
crates/grok-auth/src/: device.rs  error.rs  form.rs  grok_cli.rs  import.rs  lib.rs  paths.rs  refresh.rs  store.rs  timeutil.rs
crates/grok-client/: Cargo.toml
crates/grok-client/src/: config.rs  error.rs  lib.rs  responses.rs
crates/grok-server/: Cargo.toml
crates/grok-server/src/: config.rs  envelope.rs  http.rs  jobs.rs  lib.rs  logging.rs  main.rs  modes.rs  oauth.rs  server.rs  upstream.rs  usage_out.rs
crates/grok-server/src/tools/: ask_grok.rs  auth_status.rs  job_status.rs  live_e2e.rs  mod.rs  research.rs  x_search.rs
crates/grok-server/tests/: live_ask.rs
deploy/: README.md  cloudflared-config.example.yml  grok-mcp.env.example  grok-mcp.service  grokctl  init-local-env.sh  run-local.sh
docs/: tool_spec.md
docs/adr/: 0001-record-architecture-decisions.md  0002-implementation-language-and-stack.md  0003-xai-authentication.md  0004-tool-surface-token-offload.md  0005-transport-and-deployment-phases.md  0006-http-transport-and-front-door-auth.md  0007-deployment-and-configuration-posture.md  0008-tool-surface-v2-digest-and-evidence.md  README.md
