[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.2.2"
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["Luke Lee"]

[workspace.dependencies]
# Internal
grok-auth = { path = "crates/grok-auth" }
grok-client = { path = "crates/grok-client" }

# MCP: stdio + Streamable HTTP (ADR-0002 / ADR-0005)
rmcp = { version = "1.8", default-features = false, features = [
    "server",
    "macros",
    "schemars",
    "transport-io",
    "transport-streamable-http-server",
] }

axum = { version = "0.8", default-features = false, features = [
    "http1",
    "tokio",
    "form",
    "query",
    "json",
] }
http-body = "1"

getrandom = "0.3"
sha2 = "0.10"
base64 = "0.22"
url = "2"
blake3 = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "2"
anyhow = "1"

clap = { version = "4", features = ["derive", "env"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
strip = true
